2010-11-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #16431: htmlArea RTE: in WebKit, clicking on image does not select it

2010-11-25  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #16568: Wrong internal object references after cloning tslib_cObj instances

2010-11-25  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #16432: wrong markup in livesearch
	* Follow-up to #16495: corrected the backpath for imported modules
	* Follow-up to #15094: removed unused variable, resolved unknown variable

2010-11-25  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #14050: Cleanup - CGL format of t3lib files - t3lib_admin additional cleanup

2010-11-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16124: htmlArea RTE: Links are incorrectly updated in Google Chrome

2010-11-24  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16560: Hide mod_menu of record listing in page module if not needed (Thanks to Georg Ringer)

2010-11-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #14050: CleanUp - CGL format of t3lib files - svbase additional cleanup (Thanks to Jigal van Hemert)
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_utility_directory
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tree_directory
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tceforms_directory
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_stddb_directory
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_spritemanager_directory
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_search_directory
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_message_directory
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_matchcondition_directory
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_mail_directory
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_interface_directory