@@ -8,6 +8,7 @@
 
 2010-11-25  Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #16565: Bug: FlashmessageQueue does not work in FE mode (Thanks to Bastian Waidelich)
 	* Follow-up to #16432: wrong markup in livesearch
 	* Follow-up to #16495: corrected the backpath for imported modules
 	* Follow-up to #15094: removed unused variable, resolved unknown variable
